--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-*
+*.*
 !.vscode
 !*.cpp
+*test*.cpp
 !*.c
+*test_*.c
+unity.c
 !*.py
+*test.py
 !*.js
 !*.pl
-![M|m]akefile
+makefile*
+!.gitignore
